# comet-assesment

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_baseline.py  0002_core_schema.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  health.py
app/api/v1/: router.py
app/core/: __init__.py  config.py  exceptions.py  limits.py  logging.py  middleware.py  security.py
app/db/: __init__.py  base.py  session.py
app/matching/: __init__.py  constants.py  engine.py  geo_service.py  offers.py
app/models/: __init__.py  driver.py  enums.py  payment.py  ride.py  rider.py  trip.py
app/notifications/: __init__.py  dispatcher.py
app/payments/: __init__.py
app/pricing/: __init__.py  service.py  surge.py
app/repositories/: __init__.py
app/schemas/: __init__.py  auth.py  common.py  drivers.py  errors.py  health.py  payments.py  pricing.py  rides.py  trips.py
app/services/: __init__.py  drivers_service.py  payments_service.py  rides.py  trip_fsm.py  trips.py
app/utils/: redis.py  redis_sync.py
app/websockets/: __init__.py  manager.py  routes.py
app/workers/: __init__.py  celery_app.py  db_sync.py  tasks.py
docker/: Dockerfile
docs/: DEMO.md  HLD.md  LLD.md  PERFORMANCE.md  postman_collection.json
scripts/: seed.py
scripts/load/: locustfile.py
tests/: conftest.py  test_concurrent_accept.py  test_health.py  test_matching_rank.py  test_pricing.py  test_trip_fsm.py
(+9 files in other folders)
